New font applied and h2s and h3s replaced with paragraphs. Styling revised following new font application.

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TotalSquare</title>
-  <script src="https://kit.fontawesome.com/179d3cb661.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="assets/css/style.css">
+  <script src="https://kit.fontawesome.com/179d3cb661.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
   <div class="title-help-container">
     <h1 id="page-title">TotalSquare</h1>
-    <h2 id="help-icon"><i class="fas fa-question-circle"></i></h2>
+    <p id="help-icon"><i class="fas fa-question-circle"></i></p>
   </div>
   <div id="squares-container">
     <div class="square square-grid-4x4"></div>
@@ -34,8 +34,8 @@
     <div class="square square-grid-4x4"></div>
   </div>
   <div id="bottom-text-container">
-    <h2>Play Game</h2>
-    <h3>How to Play</h3>
+    <p id="start">Play Game</p>
+    <p id="how-to">How to Play</p>
   </div>
 </body>
 
