--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TotalSquare</title>
   <link rel="stylesheet" href="assets/css/style.css">
-  <script src="https://kit.fontawesome.com/179d3cb661.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
   <div class="title-help-container">
-    <h1 id="page-title">TotalSquare</h1>
+    <h1 id="page-title" class="centered-text-box">TotalSquare</span></h1>
     <p id="help-icon"><i class="fas fa-question-circle"></i></p>
   </div>
   <div id="squares-container">
@@ -33,13 +32,14 @@
     <div class="square square-grid-4x4"></div>
     <div class="square square-grid-4x4"></div>
   </div>
-  <div id="bottom-text-container">
+  <div id="bottom-text-container" class="centered-text-box">
     <p id="start">Play Game</p>
     <p id="how-to">How to Play</p>
   </div>
+  <script src="https://kit.fontawesome.com/179d3cb661.js" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
     crossorigin="anonymous"></script>
-  <script src="assets/js/script.js"></script>
+  <script src="assets/scripts/script.js"></script>
 </body>
 
 </html>
