gridDisplayUpdate function revised with switch statements and completed. Fix applied to bug when inserting new squares into the grid - all squares now replaced with new ones and CSS styling revised to suit.

--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
     <p id="help-icon"><i class="fas fa-question-circle"></i></p>
   </div>
   <div id="squares-container">
-    <div class="square square-grid-4x4"></div>
-    <div class="square square-grid-4x4"></div>
-    <div class="square square-grid-4x4"></div>
-    <div class="square square-grid-4x4"></div>
-    <div class="square square-grid-4x4"></div>
-    <div class="square square-grid-4x4"></div>
-    <div class="square square-grid-4x4"></div>
-    <div class="square square-grid-4x4"></div>
-    <div class="square square-grid-4x4"></div>
-    <div class="square square-grid-4x4"></div>
-    <div class="square square-grid-4x4"></div>
-    <div class="square square-grid-4x4"></div>
-    <div class="square square-grid-4x4"></div>
-    <div class="square square-grid-4x4"></div>
-    <div class="square square-grid-4x4"></div>
-    <div class="square square-grid-4x4"></div>
+    <div class="square square-grid-initial"></div>
+    <div class="square square-grid-initial"></div>
+    <div class="square square-grid-initial"></div>
+    <div class="square square-grid-initial"></div>
+    <div class="square square-grid-initial"></div>
+    <div class="square square-grid-initial"></div>
+    <div class="square square-grid-initial"></div>
+    <div class="square square-grid-initial"></div>
+    <div class="square square-grid-initial"></div>
+    <div class="square square-grid-initial"></div>
+    <div class="square square-grid-initial"></div>
+    <div class="square square-grid-initial"></div>
+    <div class="square square-grid-initial"></div>
+    <div class="square square-grid-initial"></div>
+    <div class="square square-grid-initial"></div>
+    <div class="square square-grid-initial"></div>
   </div>
   <div id="bottom-text-container" class="centered-text-box">
     <p id="start">&nbsp; Play Game &nbsp;</p>
