--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
   </div>
   <div id="bottom-text-container" class="centered-text-box">
     <p id="start">&nbsp; Play Game &nbsp;</p>
+    <p id="timer"></p>
     <p id="how-to">&nbsp; How to Play &nbsp;</p>
+    <p id="stage-number"></p>
   </div>
   <script src="https://kit.fontawesome.com/179d3cb661.js" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
