In-stage timer code added and manual testing successful. Functions to enable DOM manipulation, based on player's answer, coon player's answer, provisionally completed. Other small changes made to improve and correct natural flow of game.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
   <div id="bottom-text-container" class="centered-text-box">
     <p id="start">&nbsp; Play Game &nbsp;</p>
     <p id="timer"></p>
+    <p id="continue">Click Here to Continue</p>
+    <p id="exit">Exit Game</p>
     <p id="how-to">&nbsp; How to Play &nbsp;</p>
     <p id="stage-number"></p>
   </div>
