Bug where player could pause the game during the in-play countdown fixed by only allowing clicking on the home link when the timer is full.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <div class="title-help-container">
-    <h1 id="page-title" class="centered-text-box">&nbsp; TotalSquare &nbsp;</span></h1>
+    <h1 id="page-title" class="centered-text-box">&nbsp; <a href="#0" id ="home">TotalSquare</a> &nbsp;</h1>
     <p id="help-icon"><i class="fas fa-question-circle"></i></p>
   </div>
   <div id="squares-container">
@@ -36,6 +36,7 @@
     <p id="start">&nbsp; Play Game &nbsp;</p>
     <p id="timer"></p>
     <p id="continue">Click Here to Continue</p>
+    <p id="restart">Restart</p>
     <p id="exit">Exit Game</p>
     <p id="how-to">&nbsp; How to Play &nbsp;</p>
     <p id="stage-number"></p>
