Event handlers revised to disallow the clicking of the home link when the player has yet to start the game. New classes added to clickable items so that the cursor signals items which react to user input.

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TotalSquare</title>
+  <title>SumSquares</title>
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
   <div class="title-help-container">
-    <h1 id="page-title" class="centered-text-box">&nbsp; <a href="#0" id ="home">TotalSquare</a> &nbsp;</h1>
-    <p id="help-icon"><i class="fas fa-question-circle"></i></p>
+    <h1 id="page-title" class="centered-text-box">&nbsp;SumSquar<span class="half-text-size">&Sigma;</span>s&nbsp;</h1>
+    <p id="help-icon"><i class="fas fa-question-circle clickable"></i></p>
   </div>
   <div id="squares-container">
     <div class="square square-grid-initial"></div>
@@ -33,12 +33,12 @@
     <div class="square square-grid-initial"></div>
   </div>
   <div id="bottom-text-container" class="centered-text-box">
-    <p id="start">&nbsp; Play Game &nbsp;</p>
+    <p id="start" class="clickable">&nbsp; Play Game &nbsp;</p>
     <p id="timer"></p>
-    <p id="continue">Click Here to Continue</p>
-    <p id="restart">Restart</p>
-    <p id="exit">Exit Game</p>
-    <p id="how-to">&nbsp; How to Play &nbsp;</p>
+    <p id="continue" class="clickable">Click Here to Continue</p>
+    <p id="restart" class="clickable">Restart</p>
+    <p id="exit" class="clickable">Exit Game</p>
+    <p id="how-to" class="clickable">&nbsp; How to Play &nbsp;</p>
     <p id="stage-number"></p>
   </div>
   <script src="https://kit.fontawesome.com/179d3cb661.js" crossorigin="anonymous"></script>
