--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <p id="exit" class="clickable">Exit Game</p>
     <p id="how-to" class="clickable">&nbsp; How to Play &nbsp;</p>
     <p id="stage-number"></p>
+    <p id="replay" class="clickable">Play Again</p>
   </div>
   <script src="https://kit.fontawesome.com/179d3cb661.js" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
