--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="title-help-container">
     <h1 id="page-title" class="centered-text-box">&nbsp;SumSquar<span class="half-text-size">&Sigma;</span>s&nbsp;</h1>
-    <p id="help-icon"><i class="fas fa-question-circle clickable"></i></p>
+    <p id="help-icon" class="hidden"><i class="fas fa-question-circle clickable"></i></p>
   </div>
   <div id="squares-container">
     <div class="square square-grid-initial"></div>
@@ -34,13 +34,13 @@
   </div>
   <div id="bottom-text-container" class="centered-text-box">
     <p id="start" class="clickable">&nbsp; Play Game &nbsp;</p>
-    <p id="timer"></p>
-    <p id="continue" class="clickable">Click Here to Continue</p>
-    <p id="restart" class="clickable">Restart</p>
-    <p id="exit" class="clickable">Exit Game</p>
+    <p id="timer" class="hidden"></p>
+    <p id="continue" class="hidden clickable">Click Here to Continue</p>
+    <p id="restart" class="hidden clickable">Restart</p>
+    <p id="exit" class="hidden clickable">Exit Game</p>
     <p id="how-to" class="clickable">&nbsp; How to Play &nbsp;</p>
-    <p id="stage-number"></p>
-    <p id="replay" class="clickable">Play Again</p>
+    <p id="stage-number" class="hidden"></p>
+    <p id="replay" class="hidden clickable">Play Again</p>
   </div>
   <script src="https://kit.fontawesome.com/179d3cb661.js" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
