Game instructions added and manual testing done to ensure they transition correctly. Styling still to be applied later.

--- a/index.html
+++ b/index.html
@@ -11,26 +11,38 @@
 
 <body>
   <div class="title-help-container">
-    <h1 id="page-title" class="centered-text-box">&nbsp;SumSquar<span class="half-text-size">&Sigma;</span>s&nbsp;</h1>
+    <h1 id="page-title" class="centered-text-box">&nbsp;SumSquar<span class="sigma-text-size">&Sigma;</span>s&nbsp;</h1>
     <p id="help-icon" class="hidden"><i class="fas fa-question-circle clickable"></i></p>
   </div>
-  <div id="squares-container">
-    <div class="square square-grid-initial"></div>
-    <div class="square square-grid-initial"></div>
-    <div class="square square-grid-initial"></div>
-    <div class="square square-grid-initial"></div>
-    <div class="square square-grid-initial"></div>
-    <div class="square square-grid-initial"></div>
-    <div class="square square-grid-initial"></div>
-    <div class="square square-grid-initial"></div>
-    <div class="square square-grid-initial"></div>
-    <div class="square square-grid-initial"></div>
-    <div class="square square-grid-initial"></div>
-    <div class="square square-grid-initial"></div>
-    <div class="square square-grid-initial"></div>
-    <div class="square square-grid-initial"></div>
-    <div class="square square-grid-initial"></div>
-    <div class="square square-grid-initial"></div>
+  <div id="game-area-container">
+    <div id="instructions" class="hidden">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+        pariatur.
+        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+      <div id="help-close" class="clickable">Return to Game</div>
+      <div id="help-exit" class="clickable">Exit Game</div>
+    </div>
+    <div id="squares-container">
+      <div class="square square-grid-initial"></div>
+      <div class="square square-grid-initial"></div>
+      <div class="square square-grid-initial"></div>
+      <div class="square square-grid-initial"></div>
+      <div class="square square-grid-initial"></div>
+      <div class="square square-grid-initial"></div>
+      <div class="square square-grid-initial"></div>
+      <div class="square square-grid-initial"></div>
+      <div class="square square-grid-initial"></div>
+      <div class="square square-grid-initial"></div>
+      <div class="square square-grid-initial"></div>
+      <div class="square square-grid-initial"></div>
+      <div class="square square-grid-initial"></div>
+      <div class="square square-grid-initial"></div>
+      <div class="square square-grid-initial"></div>
+      <div class="square square-grid-initial"></div>
+    </div>
   </div>
   <div id="bottom-text-container" class="centered-text-box">
     <p id="start" class="clickable">&nbsp; Play Game &nbsp;</p>
