Styling revised to optimise element spacing on all device sizes.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-  <div class="title-help-container">
-    <h1 id="page-title" class="centered-text-box">&nbsp;SumSquar<span class="sigma-text-size">&Sigma;</span>s&nbsp;</h1>
+  <div id="title-help-container">
+    <h1 id="page-title" class="clickable centered-text-box">&nbsp;SumSquar<span class="sigma-text-size">&Sigma;</span>s&nbsp;</h1>
     <p id="help-icon" class="hidden"><i class="fas fa-question-circle clickable"></i></p>
   </div>
   <div id="game-area-container">
@@ -44,15 +44,17 @@
       <div class="square square-grid-initial"></div>
     </div>
   </div>
-  <div id="bottom-text-container" class="centered-text-box">
-    <p id="start" class="clickable">&nbsp; Play Game &nbsp;</p>
-    <p id="timer" class="hidden"></p>
-    <p id="continue" class="hidden clickable">Click Here to Continue</p>
-    <p id="restart" class="hidden clickable">Restart</p>
-    <p id="exit" class="hidden clickable">Exit Game</p>
-    <p id="how-to" class="clickable">&nbsp; How to Play &nbsp;</p>
-    <p id="stage-number" class="hidden"></p>
-    <p id="replay" class="hidden clickable">Play Again</p>
+  <div id="bottom-text-container">
+    <div class="centered-text-box">
+      <p id="start" class="clickable">&nbsp; Play Game &nbsp;</p>
+      <p id="timer" class="hidden"></p>
+      <p id="continue" class="hidden clickable">Click Here to Continue</p>
+      <p id="restart" class="hidden clickable">Restart</p>
+      <p id="exit" class="hidden clickable">Exit Game</p>
+      <p id="how-to" class="clickable">&nbsp; How to Play &nbsp;</p>
+      <p id="stage-number" class="hidden"></p>
+      <p id="replay" class="hidden clickable">Play Again</p>
+    </div>
   </div>
   <script src="https://kit.fontawesome.com/179d3cb661.js" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
