Function added to check window height and replace the game area with a message if the window height is insufficient to correctly display the game. Pausing of in-game countdowns still to be fully tested.

--- a/index.html
+++ b/index.html
@@ -11,17 +11,26 @@
 
 <body>
   <div id="title-help-container">
-    <h1 id="page-title" class="clickable centered-text-box">&nbsp;SumSquar<span class="sigma-text-size">&Sigma;</span>s&nbsp;</h1>
+    <p id="mute-toggle"><i class='fas fa-volume-mute clickable'></i></p>
+    <div class="title">
+      <h1 id="page-title" class="clickable centered-text-box">&nbsp;SumSquar<span
+          class="sigma-text-size">&Sigma;</span>s&nbsp;</h1>
+    </div>
     <p id="help-icon" class="hidden"><i class="fas fa-question-circle clickable"></i></p>
   </div>
+  <div id="game-rotate-container" class="hidden";>
+    <p>We're sorry!</p>
+    <p>This game is not optimised for this screen size.</p>
+    <p>Please try rotating your device to ensure a fully immersive experience.</p>
+  </div>
   <div id="game-area-container">
-    <div id="instructions" class="hidden">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-        pariatur.
-        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
+    <div id="instructions-container" class="hidden">
+      <div id="instructions">
+        <p>Welcome to the game.</p>
+        <p>Your task is simple: count the number of <strong>RED</strong> squares you see on the grid.</p>
+        <p>You'll have 5 seconds to do so before the timer runs out.</p>
+        <p>The game difficulty increases with each progressive stage, so make sure you're focussed before clicking GO!</p>
+      </div>
       <div id="help-close" class="clickable">Return to Game</div>
       <div id="help-exit" class="clickable">Exit Game</div>
     </div>
@@ -47,7 +56,7 @@
   <div id="bottom-text-container">
     <div class="centered-text-box">
       <p id="start" class="clickable">&nbsp; Play Game &nbsp;</p>
-      <p id="timer" class="hidden"></p>
+      <div id="timer" class="hidden"></div>
       <p id="continue" class="hidden clickable">Click Here to Continue</p>
       <p id="restart" class="hidden clickable">Restart</p>
       <p id="exit" class="hidden clickable">Exit Game</p>
