Sound files added and theme song playing/pausing tested. New icon added for user to mute/unmute sounds.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
 
 <body>
   <div id="title-help-container">
-    <p id="mute-toggle"><i class='fas fa-volume-mute clickable'></i></p>
+
+    <input id="mute-toggle" type="checkbox" checked>
+    <label id="mute-toggle-label" for="mute-toggle"><i class='fas fa-volume-mute clickable'></i></label>
+
+    <!-- <p id="mute-toggle"><i class='fas fa-volume-mute clickable'></i></p> -->
+
+
     <div class="title">
       <h1 id="page-title" class="clickable centered-text-box">&nbsp;SumSquar<span
           class="sigma-text-size">&Sigma;</span>s&nbsp;</h1>
