Sound issues where the click of the unmute button during certain times would result in unexpected behaviour fixed.

--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
   </div>
   <div id="bottom-text-container">
     <div class="centered-text-box">
-      <p id="start" class="clickable">&nbsp; Play Game &nbsp;</p>
-      <div id="timer" class="hidden"></div>
-      <p id="continue" class="hidden clickable">Click Here to Continue</p>
-      <p id="restart" class="hidden clickable">Restart</p>
-      <p id="exit" class="hidden clickable">Exit Game</p>
-      <p id="how-to" class="clickable">&nbsp; How to Play &nbsp;</p>
-      <p id="stage-number" class="hidden"></p>
-      <p id="replay" class="hidden clickable">Play Again</p>
+      <p id="start" class="menu-top clickable">&nbsp; Play Game &nbsp;</p>
+      <div id="timer" class="hidden menu-top"></div>
+      <p id="continue" class="hidden menu-top clickable">Click Here to Continue</p>
+      <p id="restart" class="hidden menu-top clickable">Restart</p>
+      <p id="exit" class="hidden menu-top clickable">Exit Game</p>
+      <p id="how-to" class="clickable menu-btm">&nbsp; How to Play &nbsp;</p>
+      <p id="stage-number" class="menu-btm hidden"></p>
+      <p id="replay" class="hidden menu-btm clickable">Play Again</p>
     </div>
   </div>
   <script src="https://kit.fontawesome.com/179d3cb661.js" crossorigin="anonymous"></script>
