Issue with sigma character within page title not displaying correctly on smaller screens  has been worked around - sigma replaced with 'e' on smaller screens.

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <input id="mute-toggle" type="checkbox" checked>
     <label id="mute-toggle-label" for="mute-toggle"><i class="fas fa-volume-mute clickable"></i></label>
     <div class="title">
-      <h1 id="page-title" class="clickable centered-text-box">&nbsp;SumSquar<span
-          class="sigma-text-size">&Sigma;</span>s&nbsp;</h1>
+      <h1 id="page-title" class="clickable centered-text-box">SumSquar<span
+          id="sigma">&#931;</span>s</h1>
     </div>
     <p id="help-icon" class="hidden"><i class="fas fa-question-circle clickable"></i></p>
   </div>
-  <div id="game-rotate-container" class="hidden";>
+  <div id="game-rotate-container" class="hidden">
     <p>We're sorry!</p>
     <p>This game is not optimised for this screen size.</p>
     <p>Please try rotating your device to ensure a fully immersive experience.</p>
@@ -56,12 +56,12 @@
   </div>
   <div id="bottom-text-container">
     <div class="centered-text-box">
-      <p id="start" class="menu-top clickable">&nbsp; Play Game &nbsp;</p>
+      <p id="start" class="menu-top clickable">Play Game</p>
       <div id="timer" class="hidden menu-top"></div>
       <p id="continue" class="hidden menu-top clickable">Click Here to Continue</p>
       <p id="restart" class="hidden menu-top clickable">Restart</p>
-      <p id="exit" class="hidden menu-top clickable">Exit Game</p>
-      <p id="how-to" class="clickable menu-btm">&nbsp; How to Play &nbsp;</p>
+      <p id="exit" class="hidden menu-btm clickable">Exit Game</p>
+      <p id="how-to" class="clickable menu-btm">How to Play</p>
       <p id="stage-number" class="menu-btm hidden"></p>
       <p id="replay" class="hidden menu-btm clickable">Play Again</p>
     </div>
