--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"
+        content="Think you can count quickly under pressure? Try this impossible game to test yourself!">
   <title>SumSquares</title>
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
